# nebo

./: .air-desktop.toml  .air-windows.toml  .air.toml  .dockerignore  .env.example  .gitignore  CHAT.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  SME_VERIFICATION_COMPLETE.md  THIRD-PARTY.md  WEB.md  Z-HOW.md  app  compose.yaml  go.mod  go.sum  gobot.api  gobot.go  install.sh  loop-test-state.md  nebo.go  nfpm.yaml.tmpl  scopes-state.md  sidebar-snapshot.yml  verification-snapshot.md
crates/a2ui/a2ui-core/: Cargo.toml
crates/a2ui/a2ui-core/src/: error.rs  lib.rs  prompt.rs  validation.rs
crates/a2ui/a2ui-core/tests/: integration.rs
crates/a2ui/a2ui-validation/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: agent_worker.rs  chunking.rs  compaction.rs  concurrency.rs  db_context.rs  decompose.rs  dedupe.rs  followup.rs  fuzzy.rs  goals.rs  hooks.rs  keyparser.rs  lanes.rs  large_input.rs  lib.rs  memory.rs  memory_consolidation.rs  memory_debounce.rs  memory_flush.rs  orchestrator.rs  personality.rs  proactive.rs  prompt.rs  pruning.rs  research.rs  role_worker.rs  runner.rs  sanitize.rs  search.rs  search_adapter.rs  secret_scan.rs  selector.rs  session.rs  sidecar.rs  steering.rs  structured.rs  structured_agent.rs  summarizer.rs  task_graph.rs  tool_filter.rs  (+1 more)
crates/ai/: Cargo.toml
crates/ai/src/: embedding.rs  http.rs  lib.rs  local_models.rs  sse.rs  types.rs
crates/auth/: Cargo.toml
crates/auth/src/: credential.rs  jwt.rs  keyring.rs  lib.rs  service.rs
crates/browser/: Cargo.toml
crates/browser/src/: actions.rs  audit.rs  cdp_bridge.rs  chrome.rs  config.rs  executor.rs  extension_bridge.rs  extension_relay.rs  headless_bridge.rs  human_input.rs  lib.rs  manager.rs  native_host.rs  native_types.rs  session.rs  snapshot.rs  snapshot_store.rs  storage.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mcp_serve.rs
crates/comm/: Cargo.toml
crates/comm/examples/: tunnel_spike.rs
crates/comm/src/: api.rs  api_types.rs  compress.rs  dedup.rs  devlog.rs  frame.rs  handle.rs  lib.rs  loopback.rs  manager.rs  neboai.rs  neboloop.rs  tunnel.rs  types.rs  ulid.rs  wire.rs
crates/config/: Cargo.toml
crates/config/src/: cli_detect.rs  config.rs  defaults.rs  lib.rs  models.rs  models.yaml  settings.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0009_companion_mode.sql  0010_auth_profiles.sql  0011_provider_models.sql  0015_cron_jobs.sql  0019_memories_user_scope.sql  0020_fix_sessions_index.sql  0022_pending_tasks.sql  0023_session_compaction_tracking.sql  0024_session_policies.sql  0025_mcp_oauth_client.sql  0027_plugin_settings.sql  0028_capability_permissions.sql  0029_mcp_tool_count.sql  0032_personality_preset_placeholders.sql  0034_advisors.sql  0037_quiet_hours.sql  0038_memory_chunks_schema_update.sql  0040_session_active_task.sql  0041_error_logs.sql  0046_session_work_tasks.sql  0047_model_catalog.sql  0048_compaction_flag.sql  0049_auto_update.sql  0050_workflows.sql  0051_workflows_to_fs.sql  0052_workflow_runs_cascade.sql  0053_role_workflows.sql  0054_rebuild_memories_fts.sql  0055_fix_cron_last_run.sql  0056_role_workflow_last_fired.sql  0057_entity_config.sql  0058_role_instances.sql  0059_role_workflow_emit.sql  0060_role_workflow_activities.sql  0061_workflow_runs_drop_fk.sql  0062_workflow_run_output.sql  0063_viral_referrals.sql  0064_role_input_values.sql  0065_entity_config_allowed_paths.sql  0066_commander.sql  (+50 more)
crates/db/src/: lib.rs  migrate.rs  models.rs  pool.rs  store.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: bridge.rs  client.rs  crypto.rs  lib.rs  stdio.rs  types.rs
crates/napp/: Cargo.toml  build.rs
crates/napp/examples/: fake_plugin.rs
crates/napp/src/: agent.rs  agent_loader.rs  child_guard.rs  hooks.rs  lib.rs  manifest.rs  napp.rs  plugin.rs  plugin_runtime.rs  reader.rs  registry.rs  role.rs  role_loader.rs  runtime.rs  sandbox.rs  sealed.rs  signing.rs  supervisor.rs  version.rs
crates/napp/tests/: plugin_runtime_test.rs
crates/render/: Cargo.toml
crates/render/src/: docx.rs  jsx.rs  lib.rs  xlsx.rs
crates/server/: Cargo.toml
crates/server/src/: a2ui.rs  a2ui_actions.rs  a2ui_bindings.rs  app_lifecycle.rs  artifact_updates.rs  channel_dispatch.rs  chat_dispatch.rs  codes.rs  deps.rs  entity_config.rs  heartbeat.rs  lib.rs  middleware.rs  migration.rs  napp_adapter.rs  napp_manager.rs  plugin_commands.rs  plugin_oauth.rs  plugin_provider.rs  redact.rs  run_registry.rs  scheduler.rs  spa.rs  state.rs  workflow_manager.rs
crates/server/tests/: mvp_readiness.rs  prompt_eval.rs
crates/tools/: Cargo.toml
crates/tools/src/: a2ui_tool.rs  agent_tool.rs  app_tool.rs  bot_tool.rs  capabilities.rs  channel_bridge.rs  deep_research.rs  desktop_daemon.rs  desktop_snapshot.rs  desktop_tool.rs  domain.rs  emit_tool.rs  errors.rs  event_tool.rs  events.rs  execute_tool.rs  exit_tool.rs  file_tool.rs  grep_tool.rs  keychain_tool.rs  lib.rs  loop_tool.rs  mcp_tool.rs  memory_guard.rs  message_tool.rs  music_tool.rs  notebook_tool.rs  orchestrator.rs  organizer_tool.rs  origin.rs  os_tool.rs  plugin_tool.rs  policy.rs  process.rs  publisher_tool.rs  registry.rs  research.rs  role_tool.rs  run_querier.rs  safeguard.rs  (+10 more)
crates/updater/: Cargo.toml
crates/updater/src/: apply.rs  lib.rs
crates/vm/: Cargo.toml
crates/vm-daemon/: Cargo.toml
crates/vm-daemon/src/: handler.rs  main.rs  process.rs  wire.rs
crates/vm/src/: bundle.rs  error.rs  lib.rs  manager.rs  platform_linux.rs  platform_macos.rs  rpc.rs  session.rs  transfer.rs  vm_helper.swift
crates/voice/: Cargo.toml
crates/voice/src/: conversation.rs  lib.rs  streaming.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: engine.rs  events.rs  graph.rs  lib.rs  loader.rs  parser.rs  triggers.rs
src-tauri/: Cargo.toml  Info.plist  coffee_dashboard.html  coffee_dashboard.jsx  download.xml  tauri.conf.json  weekly-report-june-8-14.md
src-tauri/bundled-napps/plugins/: .manifest
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/tmp/: sudoku.html
(+2122 files in other folders)
