[workspace]
members = [
    "a2ui-types",
    "a2ui-core",
    "a2ui-validation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
jsonschema = "0.28"
a2ui-types = { path = "a2ui-types" }
a2ui-validation = { path = "a2ui-validation" }
