[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/config",
    "crates/db",
    "crates/auth",
    "crates/ai",
    "crates/tools",
    "crates/agent",
    "crates/server",
    "crates/mcp",
    "crates/napp",
    "crates/proto",
    "crates/workflow",
    "crates/browser",
    "crates/voice",
    "crates/comm",
    "crates/notify",
    "crates/updater",
    "crates/cli",
    "src-tauri",
    "crates/a2ui/a2ui-types",
    "crates/a2ui/a2ui-core",
    "crates/a2ui/a2ui-validation",
    "crates/vm",
    "crates/render",
    "crates/vm-daemon",
]

[workspace.package]
version = "0.12.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/NeboLoop/nebo"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP & Web
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "set-header", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Browser automation (Chrome DevTools Protocol) — tier-2 built-in browser backend.
# No features: drops the optional Chromium fetcher (we launch Chrome ourselves via
# RunningChrome) and its TLS — local CDP is ws:// (no TLS needed). It's tokio-based.
chromiumoxide = { version = "0.9", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.38", features = ["bundled", "column_decltype"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

# Auth
jsonwebtoken = "10"
bcrypt = "0.16"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# Crypto
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

# Embedded assets
rust-embed = { version = "8", features = ["compression", "include-exclude"] }

# Async utilities
futures = "0.3"
async-openai = { version = "0.33", features = ["chat-completion"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["connect", "native-tls"] }
yamux = "0.13"

# Cron
cron = "0.12"

# Env
dotenvy = "0.15"

# Compression
zstd = "0.13"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
sysinfo = "0.33"
regex = "1"
semver = "1"
shellexpand = "3"
dirs = "6"
rfd = "0.15"

# Internal crates
types = { path = "crates/types", package = "nebo-types" }
config = { path = "crates/config", package = "nebo-config" }
db = { path = "crates/db", package = "nebo-db" }
auth = { path = "crates/auth", package = "nebo-auth" }
ai = { path = "crates/ai", package = "nebo-ai" }
tools = { path = "crates/tools", package = "nebo-tools" }
agent = { path = "crates/agent", package = "nebo-agent" }
server = { path = "crates/server", package = "nebo-server" }
mcp = { path = "crates/mcp", package = "nebo-mcp" }
napp = { path = "crates/napp", package = "nebo-napp" }
proto = { path = "crates/proto", package = "nebo-proto" }
workflow = { path = "crates/workflow", package = "nebo-workflow" }
browser = { path = "crates/browser", package = "nebo-browser" }
render = { path = "crates/render", package = "nebo-render" }
voice = { path = "crates/voice", package = "nebo-voice" }
comm = { path = "crates/comm", package = "nebo-comm" }
notify_crate = { path = "crates/notify", package = "nebo-notify" }
updater = { path = "crates/updater", package = "nebo-updater" }
sandbox-runtime = { git = "https://github.com/NeboLoop/sandbox-runtime.git", branch = "master" }
vm = { path = "crates/vm", package = "nebo-vm" }

# A2UI protocol
a2ui-types = { path = "crates/a2ui/a2ui-types" }
a2ui-core = { path = "crates/a2ui/a2ui-core" }
a2ui-validation = { path = "crates/a2ui/a2ui-validation" }
async-trait = "0.1"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
jsonschema = "0.28"

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Server-image profile (Dockerfile only): trades a few % runtime perf for a
# ~3x faster compile — fat LTO + one codegen unit on the 4-core CI runner was
# 24 of the image build's 30 minutes. Desktop releases keep [profile.release].
[profile.server]
inherits = "release"
lto = "thin"
codegen-units = 16
