[package]
name = "nebo"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

# Internal crates
server = { workspace = true }
config = { workspace = true }

# HTTP types (re-export from tauri for protocol handler)
http = "1"
# Sync HTTP client for proxying non-file requests in custom protocol
ureq = "2"

# System browser
open = "5"
# ~/Downloads resolution for the Work-panel save command
dirs = { workspace = true }

# Shared workspace deps
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
