[package]
name = "nebo-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
ai = { workspace = true }
db = { workspace = true }
tools = { workspace = true }
config = { workspace = true }
napp = { workspace = true }
notify_crate = { workspace = true }
workflow = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = "1"
notify = "7"
libc = "0.2"
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = "3"
