[package]
name = "nebo-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
ai = { workspace = true }
db = { workspace = true }
tools = { workspace = true }
config = { workspace = true }
a2ui-validation = { workspace = true }
napp = { workspace = true }
notify_crate = { workspace = true }
workflow = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = "1"
notify = "7"
libc = "0.2"
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
turbovec = "0.5"

# turbovec's ndarray uses the BLAS backend but never `use`s its provider crate,
# so rustc drops blas-src (and its `-framework Accelerate` link directive) from
# any final artifact whose only Accelerate path is turbovec — leaving cblas_*
# symbols undefined (e.g. this crate's test binary). blas-src's documented
# contract is that a crate in the graph must reference it; do so here
# (see `use blas_src as _;` in lib.rs).
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
