[package]
name = "nebo-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
config = { workspace = true }
db = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
