[package]
name = "nebo-browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
chromiumoxide = { workspace = true }
futures = "0.3"
rand = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
