[package]
name = "nebo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nebo-cli"
path = "src/main.rs"

[dependencies]
types = { workspace = true }
config = { workspace = true }
db = { workspace = true }
auth = { workspace = true }
ai = { workspace = true }
agent = { workspace = true }
tools = { workspace = true }
server = { workspace = true }
browser = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
