[package]
name = "nebo-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shellexpand = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
