[package]
name = "nebo-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rust-embed = { workspace = true }
uuid = { workspace = true }
