[package]
name = "nebo-napp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
flate2 = "1"
tar = "0.4"
tonic = "0.12"
prost = "0.13"
base64 = "0.22"
libc = "0.2"
serde_yaml = { workspace = true }
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"
