[package]
name = "nebo-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
ai = { workspace = true }
auth = { workspace = true }
db = { workspace = true }
config = { workspace = true }
napp = { workspace = true }

browser = { workspace = true }
render = { workspace = true }
comm = { workspace = true }
mcp = { workspace = true }
notify_crate = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }
semver = { workspace = true }
notify = "7"
glob = "0.3"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
walkdir = "2"
which = "7"
urlencoding = "2"
url = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tempfile = "3"
sandbox-runtime = { workspace = true }
vm = { workspace = true }
shlex = "1"
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
flate2 = "1"
tar = "0.4"
