[package]
name = "nebo-vm-daemon"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Daemon that runs inside the Nebo VM sandbox"

# Cross-compiled for the VM target:
#   cargo build --target aarch64-unknown-linux-musl --release -p nebo-vm-daemon
#   cargo build --target x86_64-unknown-linux-musl --release -p nebo-vm-daemon

[[bin]]
name = "nebo-vm-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
nix = { version = "0.29", features = ["user", "signal", "process", "fs"] }

# NOTE: Release profile (lto, strip, panic=abort) is set at workspace root.
# Build with: cargo build --target aarch64-unknown-linux-musl --release -p nebo-vm-daemon
