[package]
name = "nebo-voice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
bytes = "1"
thiserror = "2"
dirs = "6"
whisper-rs = "0.16"
kokorox = { git = "https://github.com/byteowlz/kokorox", branch = "main" }
