[package]
name = "nebo-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
db = { workspace = true }
ai = { workspace = true }
tools = { workspace = true }
config = { workspace = true }
types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
