[package]
name = "a2ui-core"
description = "Core logic for the A2UI protocol: traits, negotiation, validation, prompt building"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
a2ui-types = { workspace = true }
a2ui-validation = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
