[package]
name = "a2ui-validation"
description = "JSON Schema validation engine for A2UI protocol messages"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
